# pyannote-audio_overlapped-speech-detection_cpp

./: .gitignore  README.md
pipeline/: CMakeLists.txt  README.md
pipeline/script/: seg.py  verifyEveryStepResult.py
pipeline/src/: olSpeechDetection.cpp
pipeline/src/onnxModel/: onnx_model.cc  onnx_model.h
segment/: export2.py.bak  export3.py  hf_token.py
segment/cpp/: export_onnx.py
segment/cpp/src/: CMakeLists.txt  README.md  verifyEveryStepResult.py
segment/cpp/src/diarization/: diarization_model.cc  onnx_model.cc  onnx_model.h
